# prims-algorithm-maze-generation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: emscripten.yml
includes/: common.hpp  defs.hpp  game.hpp  init.hpp  maze_complex.hpp  structs.hpp  utils.hpp
src/: game.cpp  init.cpp  main.cpp  maze_complex.cpp  utils.cpp
src/tests/: test_hash.cpp  test_hash.h
